# D.E.C.K

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
app/: log.py  main.py
app/api/: router.py
app/model/: crud.py  model.py
app/runs/segment/train/: args.yaml  results.csv
