[tool.poetry]
name = "조선해양"
version = "0.1.0"
description = ""
authors = ["git-seungwon <tmddnjs3369@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
langchain = "^0.3.27"
langchain-openai = "^0.3.34"
langchain-teddynote = "^0.5.1"
langgraph = "^0.6.8"
langchain-community = "^0.3.30"
pydantic = "^2.11.10"
rich = "^14.1.0"
python-multipart = "^0.0.20"
ultralytics = "^8.3.214"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
